<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:layout_width="178dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/name_of_item"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="149dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/etName"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/income"
            app:layout_constraintStart_toStartOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/etAmount"
            app:layout_constraintTop_toBottomOf="@+id/etAmount" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintStart_toEndOf="@+id/tvBalanceHeader"
            app:layout_constraintTop_toTopOf="@+id/tvBalanceHeader" />


        <TextView
            android:id="@+id/tvBalanceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_header"
            app:layout_constraintBottom_toBottomOf="@+id/btnSummary"
            app:layout_constraintStart_toStartOf="@+id/btnType"
            app:layout_constraintTop_toTopOf="@+id/btnSummary" />

        <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all"
            app:layout_constraintBottom_toBottomOf="@+id/btnType"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintStart_toEndOf="@+id/btnType"
            app:layout_constraintTop_toTopOf="@+id/btnType" />

        <Button
            android:id="@+id/btnSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/view_summary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@+id/btnSave" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>

</LinearLayout>