<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summaryView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/tvAndWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/andwallet"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shows_balance"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="241dp">

        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/income_header"
            android:textColor="#50CA2F"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/tvIncomeAmt" />

        <TextView
            android:id="@+id/tvIncomeAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvIncome"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tvIncome"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvExpensesAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvExpenses"
            app:layout_constraintStart_toEndOf="@+id/tvExpenses"
            app:layout_constraintTop_toTopOf="@+id/tvExpenses"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvBalanceAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvBalance"
            app:layout_constraintStart_toEndOf="@+id/tvBalance"
            app:layout_constraintTop_toTopOf="@+id/tvBalance"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/expenses_header"
            android:textColor="#CA2F2F"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_header"
            android:textColor="#5EE93A"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="209dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="299dp"
            android:layout_height="56dp"
            android:src="@drawable/bracket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>